test/bad/nullables/op06.px

(Int*Char)? t = 1, 'b'
t?.c
